<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:background="@drawable/latar"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/neibstore"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:gravity="center"
        android:textColor="#E7E9F1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:id="@+id/gbr1"
        android:layout_marginTop="56dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/teks1"
            android:hint="@string/masukkan_nama_pelanggan" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvTipePelanggan"
        android:text="@string/tipe_pelanggan"
        android:textSize="16sp"
        android:textStyle="italic"
        android:padding="8dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/basicMembershipRadioButton"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:text="@string/biasa"
            android:textColor="#86BFED"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/premiumMembershipRadioButton"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/perak"
            android:textColor="#86BFED"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/vipMembershipRadioButton"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/emas"
            android:textColor="#86BFED"
            android:textSize="16sp" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gbr1"
        android:layout_marginTop="14dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/teks2"
            android:hint="@string/masukkan_kode_barang" />
    </com.google.android.material.textfield.TextInputLayout>'

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gbr1"
        android:layout_marginTop="14dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/teks3"
            android:hint="@string/masukkan_jumlah_barang" />
    </com.google.android.material.textfield.TextInputLayout>'

    <Button
        android:id="@+id/btnProcess"
        android:text="@string/proses"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>